{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 338,
  "lineage": "9f90d8dd-637d-2f90-4c24-6ca37fea7191",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:835367859851:vpc/vpc-9651acf1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-1f505176",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-9582cff1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-9651acf1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-852956e2",
            "owner_id": "835367859851",
            "state": "available",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e5191ed915b79322",
            "domain": "vpc",
            "id": "eipalloc-0ef7c7a3bf7ddf744",
            "instance": "i-0962a9b6d757020d3",
            "network_interface": "eni-003663a77e4cf72fc",
            "private_dns": "ip-172-31-47-176.eu-west-1.compute.internal",
            "private_ip": "172.31.47.176",
            "public_dns": "ec2-34-253-82-235.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.82.235",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "module.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_with_t3_unlimited",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028188d9b49b32a80",
            "arn": "arn:aws:ec2:eu-west-1:835367859851:instance/i-0a4da969a95f05b5b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a4da969a95f05b5b",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-02c71d6123ebbecc2",
            "private_dns": "ip-172-31-46-110.eu-west-1.compute.internal",
            "private_ip": "172.31.46.110",
            "public_dns": "ec2-34-253-171-33.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.171.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-011b0f120257658f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "example-20191119104106999000000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6fe3d837",
            "tags": {
              "Name": "example-t3-unlimited"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "example-t3-unlimited"
            },
            "vpc_security_group_ids": [
              "sg-0cf1c096e5d860a5a"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2_with_network_interface",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028188d9b49b32a80",
            "arn": "arn:aws:ec2:eu-west-1:835367859851:instance/i-03b68c5957db0fbcc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03b68c5957db0fbcc",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0788d7c50703da210"
              }
            ],
            "placement_group": "hunky-dory-pg",
            "primary_network_interface_id": "eni-0788d7c50703da210",
            "private_dns": "ip-172-31-33-136.eu-west-1.compute.internal",
            "private_ip": "172.31.33.136",
            "public_dns": "ec2-34-242-93-238.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.93.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ec65cb23541c9b22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6fe3d837",
            "tags": {
              "Name": "example-network"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "example-network"
            },
            "vpc_security_group_ids": [
              "sg-9eb9c1e7"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2_zero",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ec2_with_t2_unlimited",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028188d9b49b32a80",
            "arn": "arn:aws:ec2:eu-west-1:835367859851:instance/i-0da9e84d14eca53fc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0da9e84d14eca53fc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-054605a4c3715791c",
            "private_dns": "ip-172-31-36-13.eu-west-1.compute.internal",
            "private_ip": "172.31.36.13",
            "public_dns": "ec2-34-245-5-122.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.5.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d26cf9e1d76543b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "example-20191119104106999000000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6fe3d837",
            "tags": {
              "Name": "example-t2-unlimited"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "example-t2-unlimited"
            },
            "vpc_security_group_ids": [
              "sg-0cf1c096e5d860a5a"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028188d9b49b32a80",
            "arn": "arn:aws:ec2:eu-west-1:835367859851:instance/i-0962a9b6d757020d3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-1:835367859851:key/614719f1-5d92-47fd-aef9-bb45cc2f2832",
                "volume_id": "vol-0abef97745f94d987",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0962a9b6d757020d3",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "monitoring": false,
            "placement_group": "hunky-dory-pg",
            "primary_network_interface_id": "eni-003663a77e4cf72fc",
            "private_dns": "ip-172-31-47-176.eu-west-1.compute.internal",
            "private_ip": "172.31.47.176",
            "public_dns": "ec2-34-253-82-235.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.82.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e0892ab06ddbfaa8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "example-20191119104106999000000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6fe3d837",
            "tags": {
              "Env": "Private",
              "Location": "Secret",
              "Name": "example-normal"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "example-normal"
            },
            "vpc_security_group_ids": [
              "sg-0cf1c096e5d860a5a"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0cf1e3377ea743f95",
                "device_index": 0,
                "instance": "i-03b68c5957db0fbcc"
              }
            ],
            "id": "eni-0788d7c50703da210",
            "private_dns_name": "ip-172-31-33-136.eu-west-1.compute.internal",
            "private_ip": "172.31.33.136",
            "private_ips": [
              "172.31.33.136"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-9eb9c1e7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6fe3d837"
          },
          "depends_on": [
            "data.aws_subnet_ids.all"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:835367859851:security-group/sg-0cf1c096e5d860a5a",
            "description": "Security group for example usage with EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf1c096e5d860a5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All IPV4 ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-20191119104106999000000001",
            "name_prefix": "example-",
            "owner_id": "835367859851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-9651acf1"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1642083717",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cf1c096e5d860a5a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2583197355",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cf1c096e5d860a5a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          }
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-2354767046",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0cf1c096e5d860a5a",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}